--- a/components/dropdown/src/styles/snowflake/style.scss
+++ b/components/dropdown/src/styles/snowflake/style.scss
@@ -22,7 +22,7 @@
 
 .wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: wrapper;
 }
 
 .trigger {
@@ -66,11 +66,14 @@
   }
 }
 
-// .layout-snowflake,
-// .layout-snowflake-left,
-// .layout-snowflake-right {
-//   //
-// }
+.layout-snowflake,
+.layout-snowflake-left,
+.layout-snowflake-right {
+  .chevron {
+    margin-left: 8px;
+    margin-right: 24px;
+  }
+}
 
 // :host {
 //   position: relative;
