--- a/components/select/apiExamples/emphasized/basic-ondark.html
+++ b/components/select/apiExamples/emphasized/basic-ondark.html
@@ -1,15 +1,79 @@
-<auro-select layout="emphasized" shape="pill" size="xl" value="flights" ondark required forceDisplayValue style="display:inline-block;">
+<auro-select layout="emphasized" shape="pill" size="xl" value="flights" forceDisplayValue ondark required style="display:inline-block;">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Select Example</span>
-  <span slot="helptext">Example help text</span>
-  <div slot="displayValue">
-    <auro-icon style="--ds-auro-icon-size: 40px;" category="terminal" name="plane-diag-fill" ondark></auro-icon>
-  </div>
-  <auro-menu nocheckmark ondark>
-    <auro-menuoption value="flights"><auro-icon category="terminal" name="plane-diag-fill" customcolor></auro-icon> Flights</auro-menuoption>
-    <auro-menuoption value="cars"><auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars</auro-menuoption>
-    <auro-menuoption value="hotels"><auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels</auro-menuoption>
-    <auro-menuoption value="packages"><auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages</auro-menuoption>
-    <auro-menuoption value="cruises"><auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises</auro-menuoption>
+  <span slot="helptext">forceDisplayValue</span>
+  <span slot="placeholder">Placeholder</span>
+  <auro-menu nocheckmark>
+    <auro-menuoption value="flights">
+      <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="terminal" name="plane-diag-fill" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="cars">
+      <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="car-rental-stroke" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="hotels">
+      <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="hotel-filled" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="packages">
+      <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="shop" name="gift-filled" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="cruises">
+      <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="in-flight" name="boarding" customcolor></auro-icon>
+    </auro-menuoption>
+  </auro-menu>
+</auro-select>
+
+<auro-select layout="emphasized" shape="pill" size="xl" value="flights" ondark required style="display:inline-block;">
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
+  <span slot="label">Select Example</span>
+  <span slot="helptext">displayValue</span>
+  <auro-menu nocheckmark>
+    <auro-menuoption value="flights">
+      <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="terminal" name="plane-diag-fill" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="cars">
+      <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="car-rental-stroke" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="hotels">
+      <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="destination" name="hotel-filled" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="packages">
+      <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="shop" name="gift-filled" customcolor></auro-icon>
+    </auro-menuoption>
+    <auro-menuoption value="cruises">
+      <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
+      <auro-icon style="--ds-auro-icon-size: 40px;" slot="displayValue" category="in-flight" name="boarding" customcolor></auro-icon>
+    </auro-menuoption>
+  </auro-menu>
+</auro-select>
+
+<auro-select layout="emphasized" shape="pill" size="xl" value="flights" ondark required style="display:inline-block;">
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
+  <span slot="label">Select Example</span>
+  <span slot="helptext">no displayValue in menuoption</span>
+  <auro-menu nocheckmark>
+    <auro-menuoption value="flights">
+      <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
+    </auro-menuoption>
+    <auro-menuoption value="cars">
+      <auro-icon category="destination" name="car-rental-stroke" customcolor></auro-icon> Cars
+    </auro-menuoption>
+    <auro-menuoption value="hotels">
+      <auro-icon category="destination" name="hotel-stroke" customcolor></auro-icon> Hotels
+    </auro-menuoption>
+    <auro-menuoption value="packages">
+      <auro-icon category="shop" name="gift-stroke" customcolor></auro-icon> Packages
+    </auro-menuoption>
+    <auro-menuoption value="cruises">
+      <auro-icon category="in-flight" name="boarding" customcolor></auro-icon> Cruises
+    </auro-menuoption>
   </auro-menu>
 </auro-select>
