refactor: updates for auro-select layouts

--- a/components/layoutElement/src/styles/shapeSize.scss
+++ b/components/layoutElement/src/styles/shapeSize.scss
@@ -53,6 +53,10 @@ $xs: 24px;
   @include parentBorder($size);
 }
 
+.wrapper {
+  overflow: hidden;
+}
+
 .shape-classic-xl,
 .shape-classic-lg,
 .shape-classic-md,
