--- a/components/select/apiExamples/snowflake/basic.html
+++ b/components/select/apiExamples/snowflake/basic.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex-direction: row; gap: 10px;">
-  <auro-select layout="emphasized" shape="pill" size="xl" value="flights" forceDisplayValue style="display:inline-block;">
+  <auro-select layout="snowflake" shape="snowflake" value="flights" forceDisplayValue style="display:inline-block;">
     <span slot="label">Select Example</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
@@ -25,7 +25,7 @@
     </auro-menu>
   </auro-select>
 
-  <auro-select layout="emphasized" shape="pill" size="xl" value="flights" style="display:inline-block;">
+  <auro-select layout="snowflake" shape="snowflake" value="flights" style="display:inline-block;">
     <span slot="label">Select Example</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
@@ -51,7 +51,7 @@
     </auro-menu>
   </auro-select>
 
-  <auro-select layout="emphasized" shape="pill" size="xl" value="flights" required style="display:inline-block;">
+  <auro-select layout="snowflake" shape="snowflake" value="flights" required style="display:inline-block;">
     <span slot="label">Select Example</span>
     <span slot="helptext">no displayValue in menuoptions</span>
     <auro-menu nocheckmark>
