--- a/components/datepicker/src/styles/style.scss
+++ b/components/datepicker/src/styles/style.scss
@@ -9,51 +9,31 @@
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
-[auro-input] {
-  &::part(iconContainer) {
-    top: 0;
-    display: flex;
-    height: 100%;
-    align-items: center;
-  }
-
-  &::part(accentIcon) {
-    transition: all .3s cubic-bezier(.215, .61, .355, 1);
-  }
-
-  &::part(helpText) {
-    display: none;
-  }
-
-  &::part(wrapper) {
-    &:focus-within {
-      &:before {
-        border-bottom-width: 0 !important;
-        box-shadow: unset !important;
-        outline: unset !important;
-      }
+:host([layout="classic"]) {
+  [auro-input] {
+    &::part(iconContainer) {
+      top: 0;
+      display: flex;
+      height: 100%;
+      align-items: center;
     }
 
-    --ds-auro-input-border-color: transparent;
-    --ds-auro-input-container-color: transparent;
-  }
+    &::part(accentIcon) {
+      transition: all .3s cubic-bezier(.215, .61, .355, 1);
+    }
 
-  // Horizontal ruler
-  &:not(:first-child) {
+    &::part(helpText) {
+      display: none;
+    }
+
     &::part(wrapper) {
-      /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
-      &::after {
-        position: absolute;
-        left: 50%;
-        width: 95%;
-        height: 1px;
-        background-color: var(--ds-auro-datepicker-range-input-divider-color);
-        content: '';
-        transform: translateX(-50%);
+      &:focus-within {
+        &:before {
+          border-bottom-width: 0 !important;
+          box-shadow: unset !important;
+          outline: unset !important;
+        }
       }
-    }
-  }
-}
 
 .dpTriggerContent {
   display: flex;
@@ -77,68 +57,117 @@
   [auro-input] {
     &:first-of-type {
       margin-right: var(--ds-size-150, $ds-size-150);
+      --ds-auro-input-border-color: transparent;
+      --ds-auro-input-container-color: transparent;
     }
 
-    &:nth-child(2) {
-      margin-left: var(--ds-size-150, $ds-size-150);
-
-      &::part(accentIcon) {
-        display: none;
-      }
-
-      &::part(label) {
-        left: 0;
-        width: 100%;
-      }
-
-      &::part(input) {
-        padding-left: 0;
-      }
-
-      &:before {
-        position: absolute;
-        top: 13px;
-        left: calc(var(--ds-size-150, $ds-size-150) * -1);
-        display: block;
-        width: 1px;
-        height: 2rem;
-        content: '';
-      }
-    }
-
-    // Hide horizontal ruler
+    // Horizontal ruler
     &:not(:first-child) {
-      /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
       &::part(wrapper) {
-        &:after {
-          content: none;
+        /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
+        &::after {
+          position: absolute;
+          left: 50%;
+          width: 95%;
+          height: 1px;
+          background-color: var(--ds-auro-datepicker-range-input-divider-color);
+          content: '';
+          transform: translateX(-50%);
         }
       }
     }
   }
-}
 
-:host(:not([stacked])[range]) {
-  [auro-input] {
-    max-width: 50%;
-  }
-}
-
-@include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
-  ::part(popover) {
-    position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
-    width: 100vw !important;
-    height: 100vh !important;
-    margin-bottom: var(--ds-size-200, $ds-size-200);
-    transform: unset !important;
+  .outerWrapper {
+    position: relative;
+    container: outerwrapper / inline-size;
   }
 
-  .calendarWrapper {
+  .dpTriggerContent {
     display: flex;
-    height: 100dvh;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+
+    [auro-input] {
+      flex: 1;
+    }
+  }
+
+  // Container queries
+
+  /* This value is per design but relates to
+     https://github.com/AlaskaAirlines/AuroDesignTokens/issues/206
+  */
+  &:not([stacked]) {
+    .dpTriggerContent {
+      flex-direction: row;
+    }
+
+    [auro-input] {
+      &:first-of-type {
+        margin-right: var(--ds-size-150, $ds-size-150);
+      }
+
+      &:nth-child(2) {
+        margin-left: var(--ds-size-150, $ds-size-150);
+
+        &::part(accentIcon) {
+          display: none;
+        }
+
+        &::part(label) {
+          left: 0;
+          width: 100%;
+        }
+
+        &::part(input) {
+          padding-left: 0;
+        }
+
+        &:before {
+          position: absolute;
+          top: 13px;
+          left: calc(var(--ds-size-150, $ds-size-150) * -1);
+          display: block;
+          width: 1px;
+          height: 2rem;
+          content: '';
+        }
+      }
+
+      // Hide horizontal ruler
+      &:not(:first-child) {
+        /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
+        &::part(wrapper) {
+          &:after {
+            content: none;
+          }
+        }
+      }
+    }
+  }
+
+  &:not([stacked])[range] {
+    [auro-input] {
+      max-width: 50%;
+    }
+  }
+
+  @include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
+    ::part(popover) {
+      position: fixed !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 100vw !important;
+      height: 100vh !important;
+      margin-bottom: var(--ds-size-200, $ds-size-200);
+      transform: unset !important;
+    }
+
+    .calendarWrapper {
+      display: flex;
+      height: 100dvh;
+      flex-direction: row;
+      justify-content: center;
+    }
   }
 }
