fix: have a borderless classic input in the fullscreen bib for combobox

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -29,6 +29,7 @@
   width: 100%;
 
   ::slotted([auro-input]) {
+    box-sizing: border-box;
     padding: 0 var(--ds-size-200, #{vac.$ds-size-200});
   }
 }
