refactor: input linter cleanup

--- a/components/input/src/styles/classic/color.scss
+++ b/components/input/src/styles/classic/color.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern */
+
 @use "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska" as v;
 
 .layout-classic {
