--- a/components/input/src/styles/emphasized/color.scss
+++ b/components/input/src/styles/emphasized/color.scss
@@ -2,7 +2,7 @@
 
 // ---------------------------------------------------------------------
 
-/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern */
+/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern, selector-max-class */
 
 // Support for fallback values
 @use '@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska' as v;
