--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -8,11 +8,12 @@
 
 // Support for fallback values
 
+/* stylelint-disable max-nesting-depth, selector-max-combinators, selector-max-compound-selectors, selector-max-attribute, no-descending-specificity */
+
 @import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
 @import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
-/* stylelint-disable no-descending-specificity, selector-max-attribute */
 :host([layout*='classic']) {
   position: relative;
   max-width: 100%;
