--- a/components/dropdown/src/styles/snowflake/style.scss
+++ b/components/dropdown/src/styles/snowflake/style.scss
@@ -12,7 +12,7 @@
 @import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
-/* stylelint-disable no-descending-specificity, selector-max-attribute */
+/* stylelint-disable no-descending-specificity, selector-max-attribute, selector-max-class, selector-class-pattern */
 
 // COMMON FOR ALL --------------------------------------------
 
@@ -22,47 +22,47 @@
 
 .wrapper {
   display: flex;
-  flex-direction: wrapper;
+  flex-direction: row;
 }
 
 .trigger {
-  flex: 1;
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
   outline: none;
 }
 
 .triggerContentWrapper {
-  flex: 1;
   display: flex;
+  width: 100%;
+  flex: 1;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
 
 .triggerContent {
-  overflow: hidden;
-  flex: 1;
   display: flex;
+  overflow: hidden;
+  width: 100%;
+  flex: 1;
   align-items: center;
   justify-content: center;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 100%;
 }
 
 // LAYOUTS ---------------------------------------------------
 
 :host([layout*='snowflake']) {
   .leftIndent {
-    margin-left: var(--ds-size-300, $ds-size-300);
     width: calc(100% - var(--ds-size-600, $ds-size-600));
+    margin-left: var(--ds-size-300, $ds-size-300);
   }
 
   .rightIndent {
-    margin-right: var(--ds-size-300, $ds-size-300);
     width: calc(100% - var(--ds-size-600, $ds-size-600));
+    margin-right: var(--ds-size-300, $ds-size-300);
   }
 }
 
